--- a/src/App.css
+++ b/src/App.css
@@ -536,14 +536,14 @@
 .word-left {
   justify-self: end;
   text-align: right;
-  padding-right: 2px;
+  padding-right: 0.04em;
   min-width: 0;
 }
 
 .word-right {
   justify-self: start;
   text-align: left;
-  padding-left: 2px;
+  padding-left: 0.04em;
   min-width: 0;
 }
 
@@ -1944,15 +1944,6 @@
     font-size: 0.9rem;
   }
 
-  .word-left {
-    padding-right: 1px;
-  }
-
-  .word-right {
-    padding-left: 1px;
-  }
-
-
   .slider {
     grid-template-columns: 1fr;
   }
@@ -2100,14 +2091,6 @@
 
   .display-chunk {
     padding: 0 12px;
-  }
-
-  .word-left {
-    padding-right: 0;
-  }
-
-  .word-right {
-    padding-left: 0;
   }
 
   .display-context {
